testsuite/tests/v1/list_comprehension/wrong_binding/test.out
Error: Unknown symbol
   ╭─[ <working-dir>/script.lkql:1:11 ]
   │
 1 │ val l1 = [b for a in [1, 2, 3]]
   │           ┬  
   │           ╰── The symbol "b" cannot be resolved in the current scope
───╯
